# Fruit_products

./: Fruit_day.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
example/: Steven_Crawler全範圍.py  code_III_vegetable_selenium_scraper_area.ipynb  code_II_API.ipynb  code_II_API_VeggieFruit_area.ipynb  taiwan_weather_daily.csv  test_2.csv
example/水果資料/: 木瓜.csv  桃.csv  水果彙整.xlsx  芒果.csv  草莓.csv  葡萄.csv  蘋果.csv  香蕉.csv  鳳梨.csv
example/蔬果資料(面積)/API_method/: 2020-2024年芒果.csv  2020-2024年香蕉.csv  2020-2024年鳳梨.csv  2020~2024年木瓜.csv  2020~2024年草莓.csv  2020~2024年葡萄.csv  2020~2024年蘋果.csv
work_area/code/: Fruit_day.py  code_III_vegetable_selenium_scraper_area.ipynb  code_II_API_VeggieFruit_area.ipynb  code_I_vegetable_price.ipynb  taiwan_weather_final.py  test.py  weatherdata.py
work_area/data/蔬果資料(面積)/API_method/: 2020-2024年彙整.csv
work_area/data/蔬果資料(面積)/Selenium_method/: 113年新北市各作物面積資料.csv
