[project]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pandasql (>=0.7.3,<0.8.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "selenium (>=4.37.0,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "meteostat (>=1.7.6,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)"
]
